# auth_service

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  coverage.txt  coverage.xml  docker-compose.yml  junit.xml  pyproject.toml  pytest.ini  source.list  temp-requirements.txt
.github/workflows/: ci.yml
app/: Dockerfile  main.py
app/api/core/: config.py
app/api/v1/: auth.py  base_routes.py  routes.py  test_routes.py
app/core/: config.py  security.py
app/database/: create_db.py  db.py
app/models/: base.py  token.py  user.py
app/schemas/: token.py  user.py
app/tests/: test_schemas.py
backend/: .coverage  .env.template  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/apps/: main.py
backend/core/: __init__.py  config.py  database.py
backend/tests/: db.py  test_config.py  test_db.py  test_schemas.py
frontend/: Dockerfile  index.html  jest.config.cjs  jest.config.js  jest.config.mjs  jest.setup.js  nginx.conf  package-lock.json  package.json  setupTests.js  setupTests.mjs  vite.config.js
frontend/src/: App.jsx  main.js  style.css
frontend/tests/: main.test.js
frontend/utils/: errorHandler.js
migrations/: .coverage  env.py
migrations/versions/: a724c4731831_initial_migration.py  b668a846bcd8_create_users_and_refresh_tokens_tables.py
tests/: conftest.py  test_auth.py  test_base_routes.py  test_config.py  test_connection_db.py  test_db.py  test_db_tables.py  test_routes.py  test_schemas.py  test_security.py
(+51 files in other folders)
